P03/iptables_ejemplo_sysconfig.txt
# Generated by iptables-save v1.2.8 on Tue Mar 22 14:10:36 2005
*filter
:INPUT DROP [0:0]
:FORWARD DROP [10:1760]
:OUTPUT DROP [0:0]
:all2all - [0:0]
:common - [0:0]
:dynamic - [0:0]
:eth0_fwd - [0:0]
:eth0_in - [0:0]
:eth1_fwd - [0:0]
:eth1_in - [0:0]
:eth2_fwd - [0:0]
:eth2_in - [0:0]
:fw2loc - [0:0]
:fw2masq - [0:0]
:fw2net - [0:0]
:icmpdef - [0:0]
:loc2fw - [0:0]
:loc2masq - [0:0]
:loc2net - [0:0]
:masq2fw - [0:0]
:masq2loc - [0:0]
:masq2net - [0:0]
:net2all - [0:0]
:net2fw - [0:0]
:net2loc - [0:0]
:net2masq - [0:0]
:newnotsyn - [0:0]
:reject - [0:0]
:shorewall - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT ! -p icmp -m state --state INVALID -j DROP 
-A INPUT -i eth0 -j eth0_in 
-A INPUT -i eth1 -j eth1_in 
-A INPUT -i eth2 -j eth2_in 
-A INPUT -j common 
-A INPUT -j LOG --log-prefix "Shorewall:INPUT:REJECT:" --log-level info 
-A INPUT -j reject 
-A FORWARD ! -p icmp -m state --state INVALID -j DROP 
-A FORWARD -i eth0 -j eth0_fwd 
-A FORWARD -i eth1 -j eth1_fwd 
-A FORWARD -i eth2 -j eth2_fwd 
-A FORWARD -j common 
-A FORWARD -j LOG --log-prefix "Shorewall:FORWARD:REJECT:" --log-level info 
-A FORWARD -j reject 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT ! -p icmp -m state --state INVALID -j DROP 
-A OUTPUT -o eth1 -p udp -m udp --dport 67:68 -j ACCEPT 
-A OUTPUT -o eth2 -p udp -m udp --dport 67:68 -j ACCEPT 
-A OUTPUT -o eth0 -j fw2net 
-A OUTPUT -o eth1 -j fw2masq 
-A OUTPUT -o eth2 -j fw2loc 
-A OUTPUT -j common 
-A OUTPUT -j LOG --log-prefix "Shorewall:OUTPUT:REJECT:" --log-level info 
-A OUTPUT -j reject 
-A all2all -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A all2all -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A all2all -j common 
-A all2all -j LOG --log-prefix "Shorewall:all2all:REJECT:" --log-level info 
-A all2all -j reject 
-A common -p icmp -j icmpdef 
-A common -p udp -m udp --dport 135 -j reject 
-A common -p udp -m udp --dport 137:139 -j reject 
-A common -p udp -m udp --dport 445 -j reject 
-A common -p tcp -m tcp --dport 139 -j reject 
-A common -p tcp -m tcp --dport 445 -j reject 
-A common -p tcp -m tcp --dport 135 -j reject 
-A common -p udp -m udp --dport 1900 -j DROP 
-A common -d 255.255.255.255 -j DROP 
-A common -d 224.0.0.0/240.0.0.0 -j DROP 
-A common -p tcp -m tcp --dport 113 -j reject 
-A common -p udp -m udp --sport 53 -m state --state NEW -j DROP 
-A common -d 193.147.162.175 -j DROP 
-A common -d 172.16.17.127 -j DROP 
-A common -d 172.16.17.255 -j DROP 
-A eth0_fwd -j dynamic 
-A eth0_fwd -o eth1 -j net2masq 
-A eth0_fwd -o eth2 -j net2loc 
-A eth0_in -j dynamic 
-A eth0_in -j net2fw 
-A eth1_fwd -j dynamic 
-A eth1_fwd -o eth0 -j masq2net 
-A eth1_fwd -o eth2 -j masq2loc 
-A eth1_in -j dynamic 
-A eth1_in -p udp -m udp --dport 67:68 -j ACCEPT 
-A eth1_in -j masq2fw 
-A eth2_fwd -j dynamic 
-A eth2_fwd -o eth0 -j loc2net 
-A eth2_fwd -o eth1 -j loc2masq 
-A eth2_in -j dynamic 
-A eth2_in -p udp -m udp --dport 67:68 -j ACCEPT 
-A eth2_in -j loc2fw 
-A fw2loc -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A fw2loc -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A fw2loc -p tcp -m multiport --dports ipp,printer,netbios-ns,netbios-dgm,netbios-ssn -m state --state NEW -j ACCEPT 
-A fw2loc -p udp -m multiport --dports ipp,printer,netbios-ns,netbios-dgm,netbios-ssn -m state --state NEW -j ACCEPT 
-A fw2loc -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A fw2loc -j ACCEPT 
-A fw2masq -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A fw2masq -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A fw2masq -p tcp -m multiport --dports ipp,printer,netbios-ns,netbios-dgm,netbios-ssn -m state --state NEW -j ACCEPT 
-A fw2masq -p udp -m multiport --dports ipp,printer,netbios-ns,netbios-dgm,netbios-ssn -m state --state NEW -j ACCEPT 
-A fw2masq -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A fw2masq -j ACCEPT 
-A fw2net -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A fw2net -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A fw2net -j ACCEPT 
-A loc2fw -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A loc2fw -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A loc2fw -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A loc2fw -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A loc2fw -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A loc2fw -p tcp -m multiport --dports domain,bootps,http,https,ipp,imap,pop3,smtp,nntp,ntp -m state --state NEW -j ACCEPT 
-A loc2fw -p udp -m multiport --dports domain,bootps,http,https,ipp,imap,pop3,smtp,nntp,ntp -m state --state NEW -j ACCEPT 
-A loc2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A loc2fw -j ACCEPT 
-A loc2masq -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A loc2masq -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A loc2masq -j ACCEPT 
-A loc2net -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A loc2net -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A loc2net -j ACCEPT 
-A masq2fw -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A masq2fw -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A masq2fw -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A masq2fw -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A masq2fw -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A masq2fw -p tcp -m multiport --dports domain,bootps,http,https,ipp,imap,pop3,smtp,nntp,ntp -m state --state NEW -j ACCEPT 
-A masq2fw -p udp -m multiport --dports domain,bootps,http,https,ipp,imap,pop3,smtp,nntp,ntp -m state --state NEW -j ACCEPT 
-A masq2fw -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A masq2fw -j ACCEPT 
-A masq2loc -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A masq2loc -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A masq2loc -j ACCEPT 
-A masq2net -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A masq2net -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A masq2net -j ACCEPT 
-A net2all -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A net2all -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A net2all -j common 
-A net2all -j LOG --log-prefix "Shorewall:net2all:DROP:" --log-level info 
-A net2all -j DROP 
-A net2fw -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A net2fw -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A net2fw -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A net2fw -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A net2fw -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A net2fw -j net2all 
-A net2loc -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A net2loc -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A net2loc -p tcp -m state --state NEW -m tcp --dport 1720 -j ACCEPT 
-A net2loc -p udp -m state --state NEW -m udp --dport 1720 -j ACCEPT 
-A net2loc -j net2all 
-A net2masq -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A net2masq -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j newnotsyn 
-A net2masq -p tcp -m state --state NEW -m tcp --dport 1720 -j ACCEPT 
-A net2masq -p udp -m state --state NEW -m udp --dport 1720 -j ACCEPT 
-A net2masq -j net2all 
-A newnotsyn -j LOG --log-prefix "Shorewall:newnotsyn:DROP:" --log-level info 
-A newnotsyn -j DROP 
-A reject -p tcp -j REJECT --reject-with tcp-reset 
-A reject -p udp -j REJECT --reject-with icmp-port-unreachable 
-A reject -p icmp -j REJECT --reject-with icmp-host-unreachable 
-A reject -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Mar 22 14:10:37 2005
# Generated by iptables-save v1.2.8 on Tue Mar 22 14:10:37 2005
*mangle
:PREROUTING ACCEPT [39990996:8605174613]
:INPUT ACCEPT [37824121:7583010372]
:FORWARD ACCEPT [2163402:1021665009]
:OUTPUT ACCEPT [81319595:110255688201]
:POSTROUTING ACCEPT [83285422:111269386446]
:outtos - [0:0]
:pretos - [0:0]
-A PREROUTING -j pretos 
-A OUTPUT -j outtos 
-A outtos -p tcp -m tcp --dport 22 -j TOS --set-tos 0x10 
-A outtos -p tcp -m tcp --sport 22 -j TOS --set-tos 0x10 
-A outtos -p tcp -m tcp --dport 21 -j TOS --set-tos 0x10 
-A outtos -p tcp -m tcp --sport 21 -j TOS --set-tos 0x10 
-A outtos -p tcp -m tcp --sport 20 -j TOS --set-tos 0x08 
-A outtos -p tcp -m tcp --dport 20 -j TOS --set-tos 0x08 
-A pretos -p tcp -m tcp --dport 22 -j TOS --set-tos 0x10 
-A pretos -p tcp -m tcp --sport 22 -j TOS --set-tos 0x10 
-A pretos -p tcp -m tcp --dport 21 -j TOS --set-tos 0x10 
-A pretos -p tcp -m tcp --sport 21 -j TOS --set-tos 0x10 
-A pretos -p tcp -m tcp --sport 20 -j TOS --set-tos 0x08 
-A pretos -p tcp -m tcp --dport 20 -j TOS --set-tos 0x08 
COMMIT
# Completed on Tue Mar 22 14:10:37 2005
# Generated by iptables-save v1.2.8 on Tue Mar 22 14:10:37 2005
*nat
:PREROUTING ACCEPT [1485925:102382292]
:POSTROUTING ACCEPT [220305:13692109]
:OUTPUT ACCEPT [59020:7228042]
:eth0_masq - [0:0]
-A POSTROUTING -o eth0 -j eth0_masq 
-A eth0_masq -s 172.16.17.0/255.255.255.128 -j SNAT --to-source 193.147.162.169 
-A eth0_masq -s 172.16.17.128/255.255.255.128 -j SNAT --to-source 193.147.162.169 
COMMIT
# Completed on Tue Mar 22 14:10:37 2005
